--- a/web-toeic/src/main/resources/application.properties
+++ b/web-toeic/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.security.oauth2.client.registration.facebook.client-id=886014715072670
+spring.security.oauth2.client.registration.facebook.client-id= 886014715072670
 spring.security.oauth2.client.registration.facebook.client-secret=939331a8bf468350d0dae8d7b8cd1cd5
 spring.security.oauth2.client.registration.facebook.scope=public_profile,email
 
-spring.datasource.url=jdbc:mysql://localhost:8889/webtoeic??useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/webtoeic??useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=anhdat1996@
 
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
