--- a/web-toeic/pom.xml
+++ b/web-toeic/pom.xml
@@ -15,14 +15,14 @@
 	<name>web-toeic</name>
 	<description>web toeic bài tập lớn môn công nghệ web tiên tiến </description>
 
-	 <properties>
-	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	    <java.version>1.8</java.version>
 	    <grpc-spring-boot-starter.version>3.0.0</grpc-spring-boot-starter.version>
 	    <os-maven-plugin.version>1.6.1</os-maven-plugin.version>
 	    <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
-	  </properties>
+	</properties>
 
 
 	<dependencies>
@@ -34,7 +34,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		 <dependency>
+		<dependency>
 	      <groupId>io.github.lognet</groupId>
 	      <artifactId>grpc-spring-boot-starter</artifactId>
 	      <version>${grpc-spring-boot-starter.version}</version>
@@ -142,22 +142,17 @@
 		    <artifactId>javassist</artifactId>
 		    <version>3.25.0-GA</version>
 		</dependency>
+		
 		<dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
-		    <version>22.0</version>
+		    <version>23.6-jre</version>
+		</dependency> 
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpcore</artifactId>
+		    <version>4.4.8</version>
 		</dependency>
-		 <dependency>
-		     <groupId>com.google.api-client</groupId>
-		     <artifactId>google-api-client-appengine</artifactId>
-		     <version>1.23.0</version>
-		     <exclusions>
-		        <exclusion>
-		          <groupId>com.google.guava</groupId>
-		          <artifactId>guava-jdk5</artifactId>
-		       </exclusion>
-		    </exclusions>
-		 </dependency>
 
 
 	</dependencies>
@@ -192,6 +187,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 			<plugin>
 		        <groupId>org.xolstice.maven.plugins</groupId>
 		        <artifactId>protobuf-maven-plugin</artifactId>
